Deleting an Object Constraint crashes Blender #81488

Closed
opened 2020-10-06 17:24:30 +02:00 by Alexander · 7 comments

System Information
Operating system: Windows 10 x64
Graphics card: GTX 1070

Blender Version
2.90.1

Short description of error
Deleting an Object Constraint in Bones with Bone Constraint will crash Blender

Exact steps for others to reproduce the error

  1. Add Armature (a single bone).
  2. Go to Edit Mode and Extract the second bone
  3. Go to Pose Mode and select Bone.001
  4. Add to that bone any BONE CONSTRAINT.
  5. Select (the First) Bone and add any OBJECT CONSTRAINT
  6. Select (the second bone) Bone.001 and delete this OBJECT CONSTRAINT -> Blender will crash

In this file: Select Bone.001 in Pose Mode, try to Delete OBJECT CONSTRAINT and blender crashes
Bug.blend

**System Information** Operating system: Windows 10 x64 Graphics card: GTX 1070 **Blender Version** 2.90.1 **Short description of error** Deleting an Object Constraint in Bones with Bone Constraint will crash Blender **Exact steps for others to reproduce the error** 1. Add Armature (a single bone). 2. Go to Edit Mode and Extract the second bone 3. Go to Pose Mode and select Bone.001 4. Add to that bone any BONE CONSTRAINT. 5. Select (the First) Bone and add any OBJECT CONSTRAINT 6. Select (the second bone) Bone.001 and delete this OBJECT CONSTRAINT -> Blender will crash In this file: Select Bone.001 in Pose Mode, try to Delete OBJECT CONSTRAINT and blender crashes [Bug.blend](https://archive.blender.org/developer/F8961329/Bug.blend)
Author

Added subscriber: @mousesanya

Added subscriber: @mousesanya
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm this, and it also crashes with 2.91.

Thanks for the report. I can confirm this, and it also crashes with 2.91.

This issue was referenced by 43ceea30f1

This issue was referenced by 43ceea30f11ef71be5f996624f8ba9ba549fa0fc
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2020-10-06 20:07:57 +02:00
Author

Thank you! Glad I could help!

Thank you! Glad I could help!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81488
No description provided.